[package]
name = "mjml-builder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AxFaure/mjml-builder"
keywords = ["mjml", "mail"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_color = "2.0.0"
